fix weather settings not responsive on mobile

--- a/css/weather-settings.css
+++ b/css/weather-settings.css
@@ -120,7 +120,7 @@
 
 
 @media screen and (max-width: 580px) {
-	.weather {
+	.weatherSettings {
 		width: 96vw;
 		box-sizing: border-box;
 	}
